# rustfullstack

./: .gitignore  Cargo.toml  README.md
app/: index.html  package-lock.json  package.json
app/src/: App.vue
app/src/components/: Register.vue
app/src/utils/: client.js
migrations/2018-09-07-173137_create_users/: up.sql
src/: main.rs  models.rs  schema.rs
test_data/: users.json
