[package]
name = "fullstack-rust-site"
version = "0.1.0"
authors = ["ManifoldFR <wilson.jallet@gmail.com>"]

[dependencies]
serde = "1.0.77"
warp = "0.1.3"
pretty_env_logger = "0.2.4"
serde_json = "1.0.27"
serde_derive = "1.0.77"
diesel = { version = "1.3.2", features = ["chrono","postgres"]}
dotenv = "0.13.0"
chrono = { version = "0.4.6", features = ["serde"] }
log = "0.4.5"
